log/edgelr2-167821.out
Running SLURM prolog script on indigo57.cluster.local
===============================================================================
Job started on Sun  9 May 00:24:36 BST 2021
Job ID          : 167821
Job name        : edgelr2
WorkDir         : /mainfs/home/jlc1n20/projects/cluster_gnn
Command         : /mainfs/home/jlc1n20/projects/cluster_gnn/scripts/sub_lr.sh
Partition       : gpu
Num hosts       : 1
Num cores       : 1
Num of tasks    : 1
Hosts allocated : indigo57
Job Output Follows ...
===============================================================================
  File "/home/jlc1n20/projects/cluster_gnn/scripts/train_lr2.py", line 11
    optimiser = torch.optim.Adam(model.parameters(), lr=0.01, weight_decay=5e-4))
                                                                                ^
SyntaxError: unmatched ')'
==============================================================================
Running epilogue script on indigo57.

Submit time  : 2021-05-08T23:32:35
Start time   : 2021-05-09T00:24:36
End time     : 2021-05-09T00:24:43
Elapsed time : 00:00:07 (Timelimit=1-00:00:00)

Job ID: 167821
Cluster: i5
User/Group: jlc1n20/fp
State: FAILED (exit code 1)
Cores: 1
CPU Utilized: 00:00:01
CPU Efficiency: 14.29% of 00:00:07 core-walltime
Job Wall-clock time: 00:00:07
Memory Utilized: 2.06 MB
Memory Efficiency: 0.01% of 40.00 GB

